string data process with string serializer

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,20 +10,19 @@ spring:
           useNativeEncoding: true
       bindings:
         input:
-          destination: teacher-details
+          destination: demo-topic
           content-type: application/*+avro
-          group: group-teacher
+          group: group-demo
         output:
-          destination: teacher-details
+          destination: demo-topic
           content-type: application/*+avro
       kafka:
         binder:
           producer-properties:
-            key.serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
-            value.serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+            key.serializer: io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+            value.serializer: io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
             schema.registry.url: http://localhost:8081
           consumer-properties:
-            key.deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
-            value.deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+            key.serializer: io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
+            value.serializer: io.confluent.kafka.serializers.json.KafkaJsonSchemaSerializer
             schema.registry.url: http://localhost:8081
-            specific.avro.reader: true
