--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.4</spring-cloud.version>
 		<kafka-avro-serializer.version>4.0.0</kafka-avro-serializer.version>
+		<kafka-json-serializer.version>7.2.1</kafka-json-serializer.version>
 		<avro.version>1.8.2</avro.version>
 	</properties>
 	<dependencies>
@@ -60,8 +61,8 @@
 		</dependency>
 		<dependency>
 			<groupId>io.confluent</groupId>
-			<artifactId>kafka-avro-serializer</artifactId>
-			<version>${kafka-avro-serializer.version}</version>
+			<artifactId>kafka-json-schema-serializer</artifactId>
+			<version>${kafka-json-serializer.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.avro</groupId>
